# tinywasm-wasmparser

./: .gitignore  Cargo.toml  README.md
src/: binary_reader.rs  lib.rs  parser.rs  readers.rs  std.rs  validator.rs
src/readers/component/: canonicals.rs  imports.rs  instances.rs  names.rs  types.rs
src/readers/core/: code.rs  coredumps.rs  custom.rs  data.rs  dylink0.rs  elements.rs  linking.rs  names.rs  operators.rs  producers.rs  types.rs
src/readers/core/types/: matches.rs
src/validator/: component.rs  core.rs  func.rs  names.rs  operators.rs  types.rs
src/validator/core/: canonical.rs
tests/: big-module.rs
