[package]
name="tinywasm-wasmparser"
version="0.200.1"
authors=["Yury Delendik <ydelendik@mozilla.com>", "Henry Gressmann <mail@henrygressmann.de>"]
license="Apache-2.0 WITH LLVM-exception"
repository="https://github.com/explodingcamera/tinywasm-wasmparser"
homepage="https://github.com/explodingcamera/tinywasm-wasmparser"
keywords=["parser", "WebAssembly", "wasm"]
description="TinyWasm's fork of the wasmparser crate"
edition="2021"

[features]
default=["wasm-unknown", "std"]
std=[]
wasm-unknown=["ahash/compile-time-rng"]

[dependencies]
bitflags={version="2.4.1", default-features=false}
indexmap={version="2.2", default-features=false}
semver={version="1.0", default-features=false}
hashbrown={version="0.14.3", default-features=false, features=["ahash", "inline-more"]}
ahash={version="0.8", default-features=false}

[dev-dependencies]
anyhow="1.0"
criterion="0.5"
wat="1.200"
wast="200.0"
rayon="1.8"
once_cell="1.13.0"
wasm-encoder="0.200"
env_logger="0.11"
log="0.4"
