[package]
name="tinywasm-wasmparser"
version="0.202.0"
authors=["Yury Delendik <ydelendik@mozilla.com>", "Henry Gressmann <mail@henrygressmann.de>"]
license="Apache-2.0 WITH LLVM-exception"
repository="https://github.com/explodingcamera/tinywasm-wasmparser"
homepage="https://github.com/explodingcamera/tinywasm-wasmparser"
keywords=["parser", "WebAssembly", "wasm"]
description="TinyWasm's fork of the wasmparser crate"
edition="2021"

[features]
default=["std"]
std=[]

[dependencies]
bitflags={version="2.5.0", default-features=false}
indexmap={version="2.2", default-features=false}
semver={version="1.0", default-features=false}
hashbrown={version="0.14.3", default-features=false, features=["ahash", "inline-more"]}
ahash={version="0.8", default-features=false, features=["compile-time-rng"]}

[dev-dependencies]
anyhow="1.0"
criterion="0.5"
wat="1.205"
wast="205.0"
rayon="1.10"
once_cell="1.19.0"
wasm-encoder="0.205"
env_logger="0.11"
log="0.4"
